# ditto-v3

be/: .gitignore  README.md  env_sample  pyproject.toml
be/app/: main.py  middleware.py
be/app/api/v1/: api.py
be/app/api/v1/endpoints/: health.py  leads.py  room.py  webhook.py
be/app/core/: config.py  dependencies.py
be/app/core/agent/: graph.py  nodes.py  routing.py  state.py  utils.py  worker.py
be/app/core/graphs/tools/: __init__.py
be/app/core/graphs/tools/linkedin/: __init__.py  account_tools.py  base_langraph_lix_tool.py  company_tools.py  contact_tools.py  job_tools.py  person_tools.py  post_tools.py  search_tools.py  tool_registry.py
be/app/core/graphs/tools/siren/: __init__.py  siren.py
be/app/core/livekit/: livekit_client.py  room_service.py  token_service.py
be/app/db/: __init__.py  database.py  models.py
be/app/schemas/: health.py  leads.py  rooms.py
be/app/utils/: logger.py
fe/: .env.example  README.md  dockerfile  eslint.config.js  eslint.config.mjs  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
fe/src/: App.tsx  index.css  vite-env.d.ts
fe/src/api/: apiCall.ts  index.ts
fe/src/assets/: index.ts
fe/src/components/: index.ts
fe/src/constants/: animationData.ts  index.ts  summary.ts  voiceAssistant.ts
fe/src/hooks/: index.ts  useAudioLevel.ts  useVoiceAssistant.ts  useVoiceControl.ts
fe/src/pages/: index.ts
fe/src/routes/: PrivateRoute.tsx  index.tsx
fe/src/styles/: fonts.css
fe/src/types/: index.ts
fe/src/utils/: index.ts  logger.ts
(+28 files in other folders)
