[project]
name = "be"
version = "0.1.0"
description = ""
authors = [
    {name = "risal-kv",email = "risal@keyvalue.systems"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "sqlalchemy (>=2.0.0,<3.0.0)",
    "asyncpg (>=0.29.0,<0.30.0)",
    "requests (>=2.31.0,<3.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "livekit (>=1.0.12,<2.0.0)",
    "livekit-plugins-openai (>=1.2.6,<2.0.0)",
    "livekit-plugins-deepgram (>=1.2.6,<2.0.0)",
    "livekit-plugins-noise-cancellation (>=0.2.5,<0.3.0)",
    "livekit-plugins-silero (>=1.2.6,<2.0.0)",
    "livekit-plugins-turn-detector (>=1.2.6,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
